--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,16 @@ javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.jar_files.zip}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.qrgen-1.4.jar}
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-io-2.5.jar}:\
+    ${file.reference.commons-lang3-3.6.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.jai-imageio-core-1.3.1.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.jcommander-1.48.jar}:\
+    ${file.reference.zxing-1.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
