--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,17 +29,25 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.commons-collections4-4.1.jar=lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=lib\\zxing\\commons-collections4-4.1.jar
 file.reference.commons-io-2.5.jar=lib\\commons-io-2.5.jar
+file.reference.commons-io-2.5.jar-1=lib\\zxing\\commons-io-2.5.jar
 file.reference.commons-lang3-3.6.jar=lib\\commons-lang3-3.6.jar
+file.reference.commons-lang3-3.6.jar-1=lib\\zxing\\commons-lang3-3.6.jar
 file.reference.core-3.3.0.jar=lib\\core-3.3.0.jar
+file.reference.core-3.3.0.jar-1=lib\\zxing\\core-3.3.0.jar
 file.reference.jai-imageio-core-1.3.1.jar=lib\\jai-imageio-core-1.3.1.jar
-file.reference.jar_files.zip=lib\\jar_files.zip
+file.reference.jai-imageio-core-1.3.1.jar-1=lib\\zxing\\jai-imageio-core-1.3.1.jar
 file.reference.javase-3.3.0.jar=lib\\javase-3.3.0.jar
+file.reference.javase-3.3.0.jar-1=lib\\zxing\\javase-3.3.0.jar
 file.reference.jcommander-1.48.jar=lib\\jcommander-1.48.jar
+file.reference.jcommander-1.48.jar-1=lib\\zxing\\jcommander-1.48.jar
 file.reference.qrgen-1.4.jar=lib\\qrgen-1.4.jar
 file.reference.sqljdbc4.jar=lib\\sqljdbc4.jar
 file.reference.webcam-capture-0.3.13-20180618.102645-4.jar=lib\\webcam-capture-0.3.13-20180618.102645-4.jar
+file.reference.webcam-capture-0.3.13-20180618.102645-4.jar-1=lib\\zxing\\webcam-capture-0.3.13-20180618.102645-4.jar
 file.reference.zxing-1.0.7.jar=lib\\zxing-1.0.7.jar
+file.reference.zxing-1.0.7.jar-1=lib\\zxing\\zxing-1.0.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -50,10 +58,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.jar_files.zip}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.qrgen-1.4.jar}:\
-    ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.commons-lang3-3.6.jar}:\
@@ -61,7 +66,18 @@ javac.classpath=\
     ${file.reference.jai-imageio-core-1.3.1.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
     ${file.reference.jcommander-1.48.jar}:\
-    ${file.reference.zxing-1.0.7.jar}
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar}:\
+    ${file.reference.zxing-1.0.7.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-io-2.5.jar-1}:\
+    ${file.reference.commons-lang3-3.6.jar-1}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.jai-imageio-core-1.3.1.jar-1}:\
+    ${file.reference.javase-3.3.0.jar-1}:\
+    ${file.reference.jcommander-1.48.jar-1}:\
+    ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar-1}:\
+    ${file.reference.zxing-1.0.7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
