--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,13 @@ file.reference.commons-lang3-3.6.jar-1=lib\\zxing\\commons-lang3-3.6.jar
 file.reference.core-3.3.0.jar=lib\\core-3.3.0.jar
 file.reference.core-3.3.0.jar-1=lib\\zxing\\core-3.3.0.jar
 file.reference.jai-imageio-core-1.3.1.jar=lib\\jai-imageio-core-1.3.1.jar
-file.reference.jai-imageio-core-1.3.1.jar-1=lib\\zxing\\jai-imageio-core-1.3.1.jar
+file.reference.jai-imageio-core-1.4.0.jar=lib\\jai-imageio-core-1.4.0.jar
 file.reference.javase-3.3.0.jar=lib\\javase-3.3.0.jar
 file.reference.javase-3.3.0.jar-1=lib\\zxing\\javase-3.3.0.jar
+file.reference.jaxws-api.jar=lib\\javaee-endorsed-api-7.0\\jaxws-api.jar
 file.reference.jcommander-1.48.jar=lib\\jcommander-1.48.jar
 file.reference.jcommander-1.48.jar-1=lib\\zxing\\jcommander-1.48.jar
+file.reference.jsr181-api.jar=lib\\javaee-endorsed-api-7.0\\jsr181-api.jar
 file.reference.qrgen-1.4.jar=lib\\qrgen-1.4.jar
 file.reference.sqljdbc4.jar=lib\\sqljdbc4.jar
 file.reference.webcam-capture-0.3.13-20180618.102645-4.jar=lib\\webcam-capture-0.3.13-20180618.102645-4.jar
@@ -59,25 +61,18 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.commons-io-2.5.jar}:\
-    ${file.reference.commons-lang3-3.6.jar}:\
-    ${file.reference.core-3.3.0.jar}:\
-    ${file.reference.jai-imageio-core-1.3.1.jar}:\
-    ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.jcommander-1.48.jar}:\
-    ${file.reference.qrgen-1.4.jar}:\
-    ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar}:\
-    ${file.reference.zxing-1.0.7.jar}:\
     ${file.reference.commons-collections4-4.1.jar-1}:\
     ${file.reference.commons-io-2.5.jar-1}:\
     ${file.reference.commons-lang3-3.6.jar-1}:\
     ${file.reference.core-3.3.0.jar-1}:\
-    ${file.reference.jai-imageio-core-1.3.1.jar-1}:\
     ${file.reference.javase-3.3.0.jar-1}:\
     ${file.reference.jcommander-1.48.jar-1}:\
     ${file.reference.webcam-capture-0.3.13-20180618.102645-4.jar-1}:\
-    ${file.reference.zxing-1.0.7.jar-1}
+    ${file.reference.zxing-1.0.7.jar-1}:\
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.jai-imageio-core-1.4.0.jar}:\
+    ${file.reference.jaxws-api.jar}:\
+    ${file.reference.jsr181-api.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
